@@ -9,6 +9,7 @@ build_requires:
   Test::Deep: 0
   Test::MockModule: 0
   Test::Spec: 0
+  Time::HiRes: 0
   open: 0
 configure_requires:
   Module::Build: 0.40
@@ -25,7 +26,7 @@ no_index:
 provides:
   App::MtAws:
     file: lib/App/MtAws.pm
-    version: 0.961_2
+    version: 0.961_3
   App::MtAws::CheckLocalHashCommand:
     file: lib/App/MtAws/CheckLocalHashCommand.pm
     version: 0
@@ -173,4 +174,4 @@ resources:
   homepage: http://mt-aws.com/
   license: http://www.gnu.org/licenses/gpl-3.0.txt
   repository: https://github.com/vsespb/mt-aws-glacier
-version: 0.961_2
+version: 0.961_3
