@@ -1,3 +1,7 @@
+
+  * Reading and parsing Journal file optimized (~ 2 times faster for UTF-8 filenames, and ~3 times faster
+  for ASCII-only filenames)
+
 ### 2013-06-01 v0.961 beta
 
   * Enhancement: segment-size option added for restore-completed command for multi-segment downloads
